--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -93,13 +93,22 @@ steps:
         . "$(System.DefaultWorkingDirectory)\tools\Versions\BumpModuleVersion.ps1" -BumpV1Module -BumpBetaModule -BumpAuthModule -Debug
 
   - task: PowerShell@2
+    name: BuildOpenApiMetadataDetectionTool
+    displayName: Build tool for detecting metadata changes
+    inputs:
+      pwsh: true
+      targetType: inline
+      script: dotnet build --configuration Release
+      workingDirectory: "$(System.DefaultWorkingDirectory)/tools/OpenApiInfoGenerator/OpenApiInfoGenerator"
+
+  - task: PowerShell@2
     name: GenerateOpenApiErrorAndInfoFiles
     displayName: Generate OpenApi error and info file for detecting unnecessary changes that would lead to a breaking change
     inputs:
       pwsh: true
       targetType: inline
-      script: |
-        . "$(System.DefaultWorkingDirectory)\tools\OpenApiInfoGenerator\OpenApiInfoGenerator\GenerateErrorAndInfoFile.ps1"
+      script: dotnet run
+      workingDirectory: "$(System.DefaultWorkingDirectory)/tools/OpenApiInfoGenerator/OpenApiInfoGenerator"
 
   - task: Bash@3
     displayName: Commit downloaded files
