--- a/.github/workflows/metadatachanges.yml
+++ b/.github/workflows/metadatachanges.yml
@@ -15,6 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   CheckForMetadataChanges:
+    permissions: read-all
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.action != 'closed')
