--- a/.github/workflows/metadatachanges.yml
+++ b/.github/workflows/metadatachanges.yml
@@ -3,14 +3,15 @@
 # This is a basic workflow to help you get started with Actions
 
 name: "Metadata Changes"
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, synchronize, reopened, closed]
     branches:
       - dev
+    paths:
+      - openApiDocs/**
+      - src/Authentication/Authentication/custom/common/MgCommandMetadata.json
+      - docs/OpenApiInfo/**
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
